--- a/locales/uz.json
+++ b/locales/uz.json
@@ -91,5 +91,31 @@
     "contactInfo": "Aloqa ma'lumotlari",
     "gallery": "Galereya",
     "copyright": "© 2024 Qizil Kitob. Barcha huquqlar himoyalangan."
+  },
+  "team": {
+    "title": "Bizning jamoa",
+    "description": "Professional mutaxassislar jamoasi tabiatni muhofaza qilish uchun ishlamoqda",
+    "members": {
+      "member1": {
+        "name": "Aziza Karimova",
+        "position": "Bosh direktor",
+        "bio": "Biologiya fanlari nomzodi, 15 yillik tajriba"
+      },
+      "member2": {
+        "name": "Sardor Alimov",
+        "position": "Ilmiy rahbar",
+        "bio": "Ekologiya bo'yicha mutaxassis, professor"
+      },
+      "member3": {
+        "name": "Dilnoza Yusupova",
+        "position": "Tadqiqotchi",
+        "bio": "Botanika bo'yicha ekspert, 10 yillik tajriba"
+      },
+      "member4": {
+        "name": "Javohir Toshmatov",
+        "position": "Zoolog",
+        "bio": "Hayvonlar olami bo'yicha mutaxassis"
+      }
+    }
   }
 }
